# wxEditor

./: CMakeLists.txt  LICENSE  NEWS  README
include/: Config.hpp  Locale.hpp  MainFrame.h  Resources.hpp  SettingsDialog.h  config.h  config.h.in  gui.h
resources/: gui.fbp  icon.xpm
resources/locale/: wxEditor.pot
resources/locale/po/: ru.po
resources/locale/po/ru/: wxEditor.po
resources/locale/ru/LC_MESSAGES/: wxEditor.mo
src/: About.cpp  CMakeLists.txt  Config.cpp  Locale.cpp  MainFrame.cpp  Resources.cpp  SettingsDialog.cpp  gui.cpp  main.cpp
